--- a/testing/main.ipynb
+++ b/testing/main.ipynb
@@ -6,15 +6,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Lets learn to connect to Google Drive\n",
-    "\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.image as mpimg\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline\n",
     "\n",
-    "from pydrive.auth import GoogleAuth\n",
-    "from pydrive.drive import GoogleDrive\n",
-    "from google.colab import auth\n",
-    "from oauth2client.client import GoogleCredentials"
+    "np.random.seed(2)\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import itertools\n",
+    "\n",
+    "from keras.utils.np_utils import to_categorical # convert to one-hot-encoding\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Dropout, Flatten, Conv2D, MaxPool2D\n",
+    "from keras.optimizers import RMSprop\n",
+    "from keras.preprocessing.image import ImageDataGenerator\n",
+    "from keras.callbacks import ReduceLROnPlateau\n",
+    "\n",
+    "\n",
+    "sns.set(style='white', context='notebook', palette='deep')"
    ]
   },
   {
@@ -22,14 +35,81 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load the data\n",
+    "train = pd.read_csv(\"../input/train.csv\")\n",
+    "test = pd.read_csv(\"../input/test.csv\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Y_train = train[\"label\"]\n",
+    "\n",
+    "# Drop 'label' column\n",
+    "X_train = train.drop(labels = [\"label\"],axis = 1) \n",
+    "\n",
+    "# free some space\n",
+    "del train \n",
+    "\n",
+    "g = sns.countplot(Y_train)\n",
+    "\n",
+    "Y_train.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check the data\n",
+    "X_train.isnull().any().describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test.isnull().any().describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Normalize the data\n",
+    "X_train = X_train / 255.0\n",
+    "test = test / 255.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reshape image in 3 dimensions (height = 28px, width = 28px , canal = 1)\n",
+    "X_train = X_train.values.reshape(-1,28,28,1)\n",
+    "test = test.values.reshape(-1,28,28,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Encode labels to one hot vectors (ex : 2 -> [0,0,1,0,0,0,0,0,0,0])\n",
+    "Y_train = to_categorical(Y_train, num_classes = 10)"
+   ]
   }
  ],
  "metadata": {
